# freelance_platform

./: CMakeLists.txt  Dockerfile  README.md  config.json  install_cppcms.sh  install_paru.sh  install_python2.sh  install_soci.sh  main.cpp  make_templates.sh  mirrorList  run.sh
data/: custom_fields.h  tmpl_add_project.h  tmpl_contractors.h  tmpl_employees.h  tmpl_main.h  tmpl_master.h  tmpl_notifications.h  tmpl_profile_edit.h  tmpl_project.h  tmpl_projects.h  tmpl_send_message.h  tmpl_signup.h  tmpl_user.h
db/: projects.db
media/css/: style.css
src/: bid.cpp  bid.h  bid_state.cpp  bid_state.h  constants.h  contractor.cpp  contractor.h  database.h  db_pool.h  employee.cpp  employee.h  message.h  project.cpp  project.h  project_factory.cpp  project_factory.h  state.cpp  state.h  user.cpp  user.h
src/apps/: chat_app.h  projects_app.h  users_app.h
src/models/: bid.cpp  bid.h  constants.cpp  contractor.cpp  contractor.h  db_pool.h  employee.cpp  employee.h  message.h  project.cpp  project.h  project_factory.h  state.h  user.cpp  user.h
src/utils/: utils.h
templates/: add_contest.tmpl  add_long.tmpl  add_project.tmpl  add_task.tmpl  chat.tmpl  contests.tmpl  contractors.tmpl  employees.tmpl  login.tmpl  longs.tmpl  main.tmpl  master.tmpl  notifications.tmpl  profile_edit.tmpl  project.tmpl  projects.tmpl  signup.tmpl  tasks.tmpl  user.tmpl
